--- a/htmlya.html
+++ b/htmlya.html
@@ -10,6 +10,10 @@
     <p><strong>Destiempo: </strong>En un tiempo o momento que es <em>inadecuado</em></p>
 <p><strong>Quemarropa:</strong>Desde muy <em>cerca</em></p>
 <p><strong>Abadia:</strong>Templo o monasterio que <em>gobierna</em> un abad o una abadesa....</p>
+<a href=""></a>
+<a href="https://www.eltiempo.com/"></a>
+<a href="https://www.eltiempo.com/deportes"></a>
+
 
 
 
