--- a/htmlya.html
+++ b/htmlya.html
@@ -13,6 +13,22 @@
 <a href=""></a>
 <a href="https://www.eltiempo.com/"></a>
 <a href="https://www.eltiempo.com/deportes"></a>
+<h1>Imagen 1</h1>
+<img src="foto2.jpg" alt="imagen 1">
+<h1>Imagen 2</h1>
+<img src="foto3.jpg" alt="imagen 2">
+
+<a href="" target="_blank"></a>
+<h1>Promocion 1</h1>
+<p>1 muzzarella y una bebida cola a 5 pesos</p>
+<a href="mailto:pizzaya@gmail.com?subject=promocion1&body=esta es la promocion 1">promocion1</a>
+<h1>Promocion 2</h1>
+<p>2 muzzarellas a 6 pesos</p>
+<a href="mailto:pizzaya@gmail.com?subject=promocion2&body=esta es la promocion 1">promocion2</a>
+<h1>Promocion 3</h1>
+<p> 4 muzarrellas a 10 pesos</p>
+<a href="mailto:pizzaya@gmail.com?subject=promocion3&body=esta es la promocion 1">promocion3</a>
+
 
 
 
