--- a/htmlya.html
+++ b/htmlya.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="#Noticia 1">Noticia 1</a>
+    <a href="#Noticia 2">Noticia 2</a>
+    <a href="#Noticia 3">Noticia 3</a>
     <p><strong>Destiempo: </strong>En un tiempo o momento que es <em>inadecuado</em></p>
 <p><strong>Quemarropa:</strong>Desde muy <em>cerca</em></p>
 <p><strong>Abadia:</strong>Templo o monasterio que <em>gobierna</em> un abad o una abadesa....</p>
@@ -28,6 +31,33 @@
 <h1>Promocion 3</h1>
 <p> 4 muzarrellas a 10 pesos</p>
 <a href="mailto:pizzaya@gmail.com?subject=promocion3&body=esta es la promocion 1">promocion3</a>
+<a name="Noticia 1"></a>
+<h2>Noticia 1</h2>
+<p>Usamos "insert into". Especificamos los nombres de los campos entre paréntesis y separados por comas
+    y luego los valores para cada campo, también entre paréntesis y separados por comas.<br>
+   Es importante ingresar los valores en el mismo orden en que se nombran los campos, si ingresamos
+    los datos en otro orden, no aparece un mensaje de error y los datos se guardan de modo 
+   incorrecto.<br>
+   Note que los datos ingresados, como corresponden a campos de cadenas de caracteres se colocan
+    entre comillas simples. Las comillas simples son OBLIGATORIAS.</p>
+<a name="Noticia 2"></a>
+<h2>Noticia 2</h2>
+<p>Usamos "insert into". Especificamos los nombres de los campos entre paréntesis y separados por comas
+    y luego los valores para cada campo, también entre paréntesis y separados por comas.<br>
+   Es importante ingresar los valores en el mismo orden en que se nombran los campos, si ingresamos
+    los datos en otro orden, no aparece un mensaje de error y los datos se guardan de modo 
+   incorrecto.<br>
+   Note que los datos ingresados, como corresponden a campos de cadenas de caracteres se colocan
+    entre comillas simples. Las comillas simples son OBLIGATORIAS.</p>
+<a name="Noticia 3"></a>
+<h2>Noticia 3</h2>
+<p>Usamos "insert into". Especificamos los nombres de los campos entre paréntesis y separados por comas
+    y luego los valores para cada campo, también entre paréntesis y separados por comas.<br>
+   Es importante ingresar los valores en el mismo orden en que se nombran los campos, si ingresamos
+    los datos en otro orden, no aparece un mensaje de error y los datos se guardan de modo 
+   incorrecto.<br>
+   Note que los datos ingresados, como corresponden a campos de cadenas de caracteres se colocan
+    entre comillas simples. Las comillas simples son OBLIGATORIAS.</p>
 
 
 
