--- a/listasordenadas.html
+++ b/listasordenadas.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <h2>Top 3 mayor poblacion del planeta</h2>
+    <ol>
+        <li>China (1.444,2 millones)</li>
+        <li>India (1.393,4 millones)</li>
+        <li>Estados Unidos (332,9 millones)</li>
+    </ol>
+    <p>Sumando estos tres paises tenemos una población de <strong>2675 millones</strong></p>
+    <ul>
+        <li><a href="https://www.eltiempo.com/" target="_blank">Periodico el tiempo</a></li>
+        <li><a href="https://www.eltiempo.com/" target="_blank">Periodico el espectador</a></li>
+        <li><a href="https://www.elespectador.com/" target="_blank">Periodico quiubo</a></li>
+
+    </ul>
+    <dl>
+        <dt>Java</dt>
+        <dd>Java es un lenguaje de programación y una plataforma informática que fue comercializada por primera vez en
+            1995 por Sun Microsystems. Hay muchas aplicaciones y sitios web que no funcionarán, probablemente, a menos
+            que tengan Java instalado y cada día se crean más. Java es rápido, seguro y fiable. Desde ordenadores
+            portátiles hasta centros de datos, desde consolas para juegos hasta computadoras avanzadas, desde teléfonos
+            móviles hasta Internet, Java está en todas partes, si es ejecutado en una plataforma no tiene que ser
+            recompilado para correr en otra. Java es, a partir de 2012, uno de los lenguajes de programación más
+            populares en uso, particularmente para aplicaciones de cliente-servidor de web, con unos diez millones de
+            usuarios reportados.</dd>
+        <dt>Angular</dt>
+        <dd>Angular (comúnmente llamado Angular 2+ o Angular 2) es un framework para aplicaciones web desarrollado en
+            TypeScript, de código abierto, mantenido por Google, que se utiliza para crear y mantener aplicaciones web
+            de una sola página. Su objetivo es aumentar las aplicaciones basadas en navegador con capacidad de Modelo
+            Vista Controlador (MVC), en un esfuerzo para hacer que el desarrollo y las pruebas sean más fáciles.</dd>
+        <dt>Javascript</dt>
+        <dd>JavaScript es un lenguaje de programación interpretado, dialecto del estándar ECMAScript. Se define como
+            orientado a objetos, ​ basado en prototipos, imperativo, débilmente tipado y dinámico.</dd>
+
+
+    </dl>
+    <ul>
+        <li>php
+            <ol>
+                <li><a href="https://angular.io/guide/router">Angular</a></li>
+                <li><a href="https://angular.io/guide/router">Angular</a></li>
+                <li><a href="https://angular.io/guide/router">Angular</a></li>
+            </ol>
+        </li>
+        <li>java
+            <ol>
+                <li><a href="https://angular.io/guide/router">Angular</a></li>
+                <li><a href="https://angular.io/guide/router">Angular</a></li>
+                <li><a href="https://angular.io/guide/router">Angular</a></li>
+            </ol>
+        </li>
+        <li>Angular
+            <ol>
+                <li><a href="https://angular.io/guide/router">Angular</a></li>
+                <li><a href="https://angular.io/guide/router">Angular</a></li>
+                <li><a href="https://angular.io/guide/router">Angular</a></li>
+            </ol>
+        </li>
+
+    </ul>
 </body>
+
 </html>
