agregar tablas html

--- a/listasordenadas.html
+++ b/listasordenadas.html
@@ -67,6 +67,44 @@
         </li>
 
     </ul>
+
+    <table border="4">
+<tr><td>Nombres</td><td>Sueldo bruto</td></tr>
+<tr><td>Daniel</td><td>3000</td></tr>
+<tr><td>Andres</td><td>4000</td></tr>
+<tr><td>Manuel</td><td>5000</td></tr>
+<tr><td>Sara</td><td>6000</td></tr>
+<tr><td>Camilo</td><td>7000</td></tr>
+<tr><td>Juan</td><td>8000</td></tr>
+<tr><td>David</td><td>9000</td></tr>
+
+
+    </table>
+    <table border="3">
+<tr><th>Nombre</th><th>Sueldo bruto</th></tr>
+<tr><td>Daniel</td><td>3000</td></tr>
+<tr><td>Andres</td><td>4000</td></tr>
+<tr><td>Manuel</td><td>5000</td></tr>
+<tr><td>Sara</td><td>6000</td></tr>
+<tr><td>Camilo</td><td>7000</td></tr>
+<tr><td>Juan</td><td>8000</td></tr>
+<tr><td>David</td><td>9000</td></tr>
+
+
+    </table>
+    <table border="3">
+        <caption>Sueldo de los empleados</caption>
+        <tr><th>Nombre</th><th>Sueldo bruto</th></tr>
+        <tr><td>Daniel</td><td>3000</td></tr>
+        <tr><td>Andres</td><td>4000</td></tr>
+        <tr><td>Manuel</td><td>5000</td></tr>
+        <tr><td>Sara</td><td>6000</td></tr>
+        <tr><td>Camilo</td><td>7000</td></tr>
+        <tr><td>Juan</td><td>8000</td></tr>
+        <tr><td>David</td><td>9000</td></tr>
+        
+        
+            </table>
 </body>
 
 </html>
