--- a/listasordenadas.html
+++ b/listasordenadas.html
@@ -69,42 +69,152 @@
     </ul>
 
     <table border="4">
-<tr><td>Nombres</td><td>Sueldo bruto</td></tr>
-<tr><td>Daniel</td><td>3000</td></tr>
-<tr><td>Andres</td><td>4000</td></tr>
-<tr><td>Manuel</td><td>5000</td></tr>
-<tr><td>Sara</td><td>6000</td></tr>
-<tr><td>Camilo</td><td>7000</td></tr>
-<tr><td>Juan</td><td>8000</td></tr>
-<tr><td>David</td><td>9000</td></tr>
+        <tr>
+            <td>Nombres</td>
+            <td>Sueldo bruto</td>
+        </tr>
+        <tr>
+            <td>Daniel</td>
+            <td>3000</td>
+        </tr>
+        <tr>
+            <td>Andres</td>
+            <td>4000</td>
+        </tr>
+        <tr>
+            <td>Manuel</td>
+            <td>5000</td>
+        </tr>
+        <tr>
+            <td>Sara</td>
+            <td>6000</td>
+        </tr>
+        <tr>
+            <td>Camilo</td>
+            <td>7000</td>
+        </tr>
+        <tr>
+            <td>Juan</td>
+            <td>8000</td>
+        </tr>
+        <tr>
+            <td>David</td>
+            <td>9000</td>
+        </tr>
 
 
     </table>
     <table border="3">
-<tr><th>Nombre</th><th>Sueldo bruto</th></tr>
-<tr><td>Daniel</td><td>3000</td></tr>
-<tr><td>Andres</td><td>4000</td></tr>
-<tr><td>Manuel</td><td>5000</td></tr>
-<tr><td>Sara</td><td>6000</td></tr>
-<tr><td>Camilo</td><td>7000</td></tr>
-<tr><td>Juan</td><td>8000</td></tr>
-<tr><td>David</td><td>9000</td></tr>
+        <tr>
+            <th>Nombre</th>
+            <th>Sueldo bruto</th>
+        </tr>
+        <tr>
+            <td>Daniel</td>
+            <td>3000</td>
+        </tr>
+        <tr>
+            <td>Andres</td>
+            <td>4000</td>
+        </tr>
+        <tr>
+            <td>Manuel</td>
+            <td>5000</td>
+        </tr>
+        <tr>
+            <td>Sara</td>
+            <td>6000</td>
+        </tr>
+        <tr>
+            <td>Camilo</td>
+            <td>7000</td>
+        </tr>
+        <tr>
+            <td>Juan</td>
+            <td>8000</td>
+        </tr>
+        <tr>
+            <td>David</td>
+            <td>9000</td>
+        </tr>
 
 
     </table>
     <table border="3">
         <caption>Sueldo de los empleados</caption>
-        <tr><th>Nombre</th><th>Sueldo bruto</th></tr>
-        <tr><td>Daniel</td><td>3000</td></tr>
-        <tr><td>Andres</td><td>4000</td></tr>
-        <tr><td>Manuel</td><td>5000</td></tr>
-        <tr><td>Sara</td><td>6000</td></tr>
-        <tr><td>Camilo</td><td>7000</td></tr>
-        <tr><td>Juan</td><td>8000</td></tr>
-        <tr><td>David</td><td>9000</td></tr>
-        
-        
-            </table>
+        <tr>
+            <th>Nombre</th>
+            <th>Sueldo bruto</th>
+        </tr>
+        <tr>
+            <td>Daniel</td>
+            <td>3000</td>
+        </tr>
+        <tr>
+            <td>Andres</td>
+            <td>4000</td>
+        </tr>
+        <tr>
+            <td>Manuel</td>
+            <td>5000</td>
+        </tr>
+        <tr>
+            <td>Sara</td>
+            <td>6000</td>
+        </tr>
+        <tr>
+            <td>Camilo</td>
+            <td>7000</td>
+        </tr>
+        <tr>
+            <td>Juan</td>
+            <td>8000</td>
+        </tr>
+        <tr>
+            <td>David</td>
+            <td>9000</td>
+        </tr>
+
+
+    </table>
+
+
+    <table border="3">
+        <tr>
+            <td rowspan="2">Argentina</td>
+            <td>El clarin</td>
+            <td><a href="http://www.lanacion.com.ar"> www.lanacion.com.ar</a></td>
+        </tr>
+        <tr>
+            <td>La nacion</td>
+            <td><a href="http://www.lanacion.com.ar">http://www.lanacion.com.ar</a></td>
+        </tr>
+        <tr>
+            <td rowspan="2">Colombia</td>
+            <td>El tiempo</td>
+            <td><a href="http://www.lanacion.com.ar">http://www.lanacion.com.ar</a></td>
+        </tr>
+        <tr>
+            <td>El espectador</td>
+            <td><a href="http://www.lanacion.com.ar">http://www.lanacion.com.ar</a></td>
+
+        </tr>
+
+        <tr>
+            <td rowspan="2">Estados Unidos</td>
+            <td>the new york times</td>
+            <td><a href="https://www.nytimes.com/es/">https://www.nytimes.com/es/</a></td>
+        </tr>
+        <tr>
+            <td>the new york times</td>
+            <td><a href="https://www.nytimes.com/es/">https://www.nytimes.com/es/</a></td>
+        </tr>
+
+
+
+
+
+    </table>
 </body>
 
 </html>
