--- a/form.html
+++ b/form.html
@@ -1,22 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <form action="registrardatos.php" method="POST">
-     Ingrese su nombre:
-     <input type="text" name="nombre">
-     Ingrese su edad:
-     <input type="text" name="edad">
-     <input type="submit" value="enviar">
+        Ingrese su nombre:
+        <input type="text" name="nombre">
+        Ingrese su edad:
+        <input type="text" name="edad">
+        <input type="submit" value="enviar">
 
 
     </form>
 
-    
+    <form action="registrardatos.php" method="POST">
+        Ingrese email:
+        <input type="email" name="email" size="40">
+        Ingrese contraseña:
+        <input type="password" name="contraseña" size="12">
+        Reescriba contraseña:
+        <input type="password" name="contraseña" size="12">
+        <input type="submit" value="enviar">
+
+    </form>
+<form action="registrardatos.php" method="POST">
+    Ingrese su nombre:
+    <input type="text" name="nombre" size="20">
+    Ingrese su mail: <br>
+    <input type="email" size="40">
+    Ingrese su DNI: <br>
+    <input type="text" size="20">
+    Descripcion de su Curriculum <br>
+    <textarea name="Curriculum" cols="30" rows="10"></textarea>
+
+</form>
+
+
+<form action="registrardatos.php" method="POST">
+Ingrese su nombre:
+<input type="text" name="nombre" size="20"><br>
+Ingrese su mail:
+<input type="email" name="email"  size="20"><br>
+Ingrese su contraseña:
+<input type="password" name="contraseña" size="20"><br>
+Cuales son sus peliculas favoritas:
+<input type="checkbox" name="milagros inesperados"><br>
+<input type="checkbox" name="rocky"><br>
+<input type="checkbox" name="jonh wick"><br>
+<input type="checkbox" name="el milagro del hudson"><br>
+<input type="checkbox" name="harry potter"><br>
+<input type="checkbox" name="el señor de los anillos"><br>
+<input type="submit" value="enviar">
+
+</form>
+
+<form action="registrardatos.php" method="POST">
+ Ingrese su nombre:
+ <input type="text" name="nombre" size="20">
+ Cual es su sistema operativo preferido:
+ <input type="radio" name="sistema operativo" value="1">Windows<br>
+ <input type="radio" name="sistema operativo" value="2">Linux<br>
+ <input type="radio" name="sistema operativo" value="3">Mac<br>
+ <input type="submit" value="enviar">   
+</form>
+
+
+<form action="registrardatos.php" method="POST">
+Escribe tu nombre:
+<input type="text" name="nombre" size="20">
+Como califica la experiencia en este sitio
+<select name="voto" >
+<option value="Excelente"></option><br>
+<option value="Muy bueno"></option><br>
+<option value=" bueno"></option><br>
+<option value="Regular"></option><br>
+<option value="Malo"></option><br>
+
+
+</select>
+<input type="submit" value="enviar">
+</form>
+
+
+<form action="registrardatos.php" method="POST">
+Seleccione los mail:
+<select name="mail[]" size="4" multiple>
+<option value="daniel@hotmail.com">daniel@hotmail.com</option>
+<option value="andres@hotmail.com">andres@hotmail.com</option>
+<option value="camilo@hotmail.com">camilo@hotmail.com</option>
+<option value="juan@hotmail.com">juan@hotmail.com</option>
+<option value="viveros@hotmail.com">viveros@hotmail.com</option>
+<option value="lozano@hotmail.com">lozano@hotmail.com</option>
+</select>
+<input type="submit" value=" enviar">
+
+</form>
+
+
 </body>
+
+
 </html>
