--- a/matriz.html
+++ b/matriz.html
@@ -44,5 +44,20 @@ Ingrese su edad:
 
 
 </form>
+
+
+<form action="agregardatos.php" method="POST">
+     Nombre:
+    <input type="text" name="nombre" value="hola" readonly><br>
+password:
+<input type="password" name="contraseña" value="holamundo221" readonly><br>
+
+<textarea name="Hola"  cols="30" rows="10" readonly></textarea>
+
+<input type="submit" value="Enviar">
+
+
+
+</form>
 </body>
 </html>
