--- a/label.html
+++ b/label.html
@@ -25,6 +25,7 @@
 <option value="10">10</option>
 </select><br>
 <input type="submit" value="enviar">
+        <input type="submit" value="enviar">
 
 
 
